--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@lucide/lab": "^0.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "buffer": "^6.0.3",
     "expo": "~53.0.23",
     "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
@@ -38,6 +39,7 @@
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "onnxruntime-react-native": "^1.22.0",
+    "pngjs": "^7.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   }
