--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt-expo-starter",
+  "name": "ИИ-дендролог",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
